# pathfinding

./: Cargo.toml  README.md  shell.nix
prefabs/: c_room_0.prefab  c_room_1.prefab  c_room_2.prefab  c_room_3.prefab  d_room_0.prefab  d_room_1.prefab  d_room_2.prefab  d_room_3.prefab  exit.prefab  generate.rb  m_room_0.prefab  m_room_1.prefab  m_room_2.prefab  m_room_3.prefab  p_room_blue.prefab  p_room_orange.prefab  spawn.prefab
src/: equipment.rs  inventory.rs  item.rs  main.rs  map.rs  player.rs  room.rs  tile.rs  traits.rs  vector2.rs  vector3.rs  velocity.rs
src/traits/: equipable.rs  inventorizable.rs  prefabricatable.rs  validatable.rs
