[package]
name = "pathfinding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
pathfinding = "3.0.13"
rand = "0.8.5"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
